service.yaml
apiVersion: v1
kind: Service
metadata:
  name: npm-app-service
spec:
  type: LoadBalancer
  ports:
  - name: "npm-demo-app"
    protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: npm-demo-app
